CSS formatting for tablets/computer done. A little disappointed that I couldn't alter more, but resizing images seems to result in compression issues and I can't figure out how to replace the images based on screen size. Other problems kept cropping up too, likely due to flexboxing.

--- a/FIGHTER.scss
+++ b/FIGHTER.scss
@@ -148,11 +148,22 @@ body{
     }
     .players{
         > .player{
+            > .statistics > p > img{
+                margin:10px;
+            }
             .playerone__energy{
                 font-size:16px;
+                margin:10px 0 10px 40px;
             }
             .playertwo__energy{
                 font-size:16px;
+                margin:10px 0 10px 40px;
+            }
+            .buttons{
+                button{
+                    margin:10px 20px;
+                    padding:2px 0 2px 0;
+                }
             }
             > .images{
                 margin:5vh 0 2vh 0;
